crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_rich_2.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: PAR
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: well
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: well
    - Separator:
        kind: Comma
        text: ","
    - Word:
        category: ~
        body:
          - Text: the
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: the
    - Word:
        category: ~
        body:
          - Text: first
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: first
    - Word:
        category: ~
        body:
          - Text: drug
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: drug
    - Word:
        category: ~
        body:
          - Text: store
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: store
    - Word:
        category: ~
        body:
          - Text: we
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: we
    - Word:
        category: ~
        body:
          - Text: went
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: went
    - Word:
        category: ~
        body:
          - Text: to
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: to
    - Word:
        category: Fragment
        body:
          - Text: th
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "&+th"
    - Word:
        category: ~
        body:
          - Text: they
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: they
    - Word:
        category: ~
        body:
          - Text: "wouldn't"
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "wouldn't"
    - Word:
        category: ~
        body:
          - Text: cover
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: cover
    - Word:
        category: ~
        body:
          - Text: it
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: it
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u0015149828_153099\u0015"
      start_time: "149828"
      end_time: "153099"
