crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_rich_3.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: CHI
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: ei
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: ei
    - Group:
        contents:
          - Word:
              category: ~
              body:
                - Text: tuu
              form_marker: ~
              lang: ~
              pos_tag: ~
              annotations: []
              raw_text: tuu
        annotations:
          - Scoped: Uncertain
  terminator:
    Period: "."
  postcodes: []
  media_bullet: ~
