crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_rich_8.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: CHI
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: Asaf
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: Asaf
    - Word:
        category: ~
        body:
          - Text: stakēl
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations:
          - Replacement:
              first:
                category: ~
                body:
                  - Text: tistakēl
                form_marker: ~
                lang: ~
                pos_tag: ~
                annotations: []
                raw_text: tistakēl
              rest: []
              end: "]"
        raw_text: stakēl
    - Word:
        category: ~
        body:
          - Text: ʕal
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: ʕal
    - Word:
        category: ~
        body:
          - Text: "ha#"
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "ha#"
    - Word:
        category: ~
        body:
          - Text: tris
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: tris
  terminator:
    Period: "."
  postcodes: []
  media_bullet: ~
