crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__snapshot_parsed_file.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
assertion_line: 606
expression: file
---
lines:
  - Header:
      Other:
        prefix:
          HeaderUtf8: "@UTF8"
        content: []
  - Header:
      Other:
        prefix:
          HeaderBegin: "@Begin"
        content: []
  - Header:
      Other:
        prefix:
          HeaderPrefix: "@Languages:\t"
        content:
          - LanguageCode: eng
  - Header:
      Participants:
        entries:
          - words:
              - CHI
              - Child
          - words:
              - MOT
              - Mother
  - Header:
      Other:
        prefix:
          HeaderPrefix: "@ID:\t"
        content:
          - IdFields:
              language: eng
              corpus: corpus
              speaker: CHI
              age: 3;00.
              sex: ""
              group: ""
              ses: ""
              role: Child
              education: ""
              custom: ""
  - Utterance:
      main_tier:
        speaker:
          Speaker: CHI
        tier_body:
          linkers: []
          langcode: ~
          contents:
            - Word:
                category: ~
                body:
                  - Text: hello
                form_marker: ~
                lang: ~
                pos_tag: ~
                annotations: []
                raw_text: hello
          terminator:
            Period: "."
          postcodes: []
          media_bullet: ~
      dependent_tiers:
        - Mor:
            items:
              - main:
                  pos: n
                  lemma: hello
                  features: []
                post_clitics: []
            terminator:
              Period: "."
  - Header:
      Other:
        prefix:
          HeaderEnd: "@End"
        content: []
source: "@UTF8\n@Begin\n@Languages:\teng\n@Participants:\tCHI Child, MOT Mother\n@ID:\teng|corpus|CHI|3;00.||||Child|||\n*CHI:\thello .\n%mor:\tn|hello .\n@End\n"
